// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pattern get width and height 1`] = `
OOX
OOO
OOO
XOO
`;

exports[`Pattern mirrorHorizontal simple 1`] = `
XO
XO
XO
`;

exports[`Pattern mirrorHorizontal simple 2`] = `
OX
OX
OX
`;

exports[`Pattern mirrorVertical simple 1`] = `
XXX
OOO
`;

exports[`Pattern mirrorVertical simple 2`] = `
OOO
XXX
`;

exports[`Pattern rotate 1`] = `
XOO
XXX
`;

exports[`Pattern rotate 2`] = `
OOX
OOX
OXX
`;

exports[`Pattern rotate 3`] = `
OXXX
OOOX
`;

exports[`Pattern rotate 4`] = `
OXX
OXO
OXO
`;

exports[`Pattern rotate 5`] = `
OXOO
OXXX
`;

exports[`Pattern toArray 1`] = `
Array [
  Array [
    1,
    1,
    1,
    0,
  ],
  Array [
    0,
    0,
    1,
    0,
  ],
  Array [
    0,
    1,
    0,
    0,
  ],
  Array [
    0,
    0,
    0,
    0,
  ],
]
`;

exports[`Pattern toString 1`] = `
"!Name: Glider
.O.
..O
OOO"
`;
